cmake_minimum_required(VERSION 3.18)
project(DesiginModel)

set(CMAKE_CUDA_STANDARD 11)

# 引入子目录
ADD_SUBDIRECTORY(src/AbstractFactory)
ADD_SUBDIRECTORY(src/Adapter)
ADD_SUBDIRECTORY(src/Bridge)
ADD_SUBDIRECTORY(src/Builder)
add_subdirectory(src/Chain-Of-Responsibility)
add_subdirectory(src/Command)
ADD_SUBDIRECTORY(src/Composite)
add_subdirectory(src/Decorator)
add_subdirectory(src/Facade)
add_subdirectory(src/Factory)
add_subdirectory(src/Flyweight)
add_subdirectory(src/IMPL)
add_subdirectory(src/Interpreter)
add_subdirectory(src/Iterator)
add_subdirectory(src/Mediator)
add_subdirectory(src/Memento)
add_subdirectory(src/Observer)
add_subdirectory(src/Prototype)
add_subdirectory(src/Proxy)
add_subdirectory(src/Singleton)
add_subdirectory(src/State)
add_subdirectory(src/Strategy)
add_subdirectory(src/Template-method)
add_subdirectory(src/Visitor)